--- a/app/views/thread_mailer/_footer.html.haml
+++ b/app/views/thread_mailer/_footer.html.haml
@@ -1,8 +1,17 @@
 %p{style: 'font-size:small;-webkit-text-size-adjust:none;color:#666;'}
   &mdash;
   %br
-  = t :"email.thread_mailer.footer_html", app_link: link, preferences_link: email_preferences_url(@utm_hash.merge(unsubscribe_token: @recipient.unsubscribe_token))
-  %img{src: mark_discussion_as_read_url(discussion_id: @discussion.id,
-                                        event_id: @event.id,
-                                        unsubscribe_token: @recipient.unsubscribe_token,
-                                        format: 'gif'), alt: '', width: 1, height: 1}
+  = t(:'email.thread_mailer.reply_or_view_online_html', url: link)
+
+  - if @following
+    %br
+    - unfollow_url = email_actions_unfollow_discussion_url(discussion_id: @discussion.id, unsubscribe_token: @recipient.unsubscribe_token)
+    = t :'email.thread_mailer.unfollow_discussion_html', unfollow_url: unfollow_url
+
+  %br
+  = t :"email.thread_mailer.change_email_preferences_html", email_preferences_url: email_preferences_url(@utm_hash.merge(unsubscribe_token: @recipient.unsubscribe_token))
+
+  %img{src: email_actions_mark_discussion_as_read_url(discussion_id: @discussion.id,
+                                                      event_id: @event.id,
+                                                      unsubscribe_token: @recipient.unsubscribe_token,
+                                                      format: 'gif'), alt: '', width: 1, height: 1}
