trying to fix the cukes

--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -30,7 +30,7 @@
                 %ul
                   %li Loading
               %li#notifications-see-more= link_to t(:see_all_notifications), notifications_path
-          %li.dropdown#groups
+          %li.dropdown.groups-dropdown-btn#groups
             %a.dropdown-toggle{href: "#", 'data-toggle' => 'dropdown'}
               %i.fa.fa-group
               %span.hidden-xs= t :"common.groups"
