--- a/app/views/discussions/_discussion_preview.html.haml
+++ b/app/views/discussions/_discussion_preview.html.haml
@@ -38,7 +38,7 @@
         .large-icon.discussion-icon.activity-icon.disabled-icon
       -else
         .large-icon.discussion-icon.activity-icon.enabled-icon
-          %span.activity-count.label.label-info
+          %span.activity-count.label.label-info.unread-comments-count
             = unread_comments_count
 
       .discussion-date-info.hidden-xs
