--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -61,7 +61,7 @@
         - if can_edit || can_leave
           .btn-group.btn-block.options
             = link_to '#',
-                      class: 'btn btn-block btn-default btn-left dropdown-toggle',
+                      class: 'btn btn-block btn-default btn-left dropdown-toggle group-options-btn',
                       data: { toggle: 'dropdown' }  do
               %i.fa.fa-cog
               = t :options
