--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -20,7 +20,7 @@
               %i.fa.fa-inbox
               %span#inbox-count.activity-count.label
           %li.dropdown#notifications-container
-            %a.dropdown-toggle{'data-toggle' => 'dropdown', :href => '#'}
+            %a.dropdown-toggle.notifications-dropdown-btn{'data-toggle' => 'dropdown', :href => '#'}
               %i.fa.fa-bell
               %span#notifications-count.label.activity-count
             %ul.dropdown-menu
@@ -30,8 +30,8 @@
                 %ul
                   %li Loading
               %li#notifications-see-more= link_to t(:see_all_notifications), notifications_path
-          %li.dropdown.groups-dropdown-btn#groups
-            %a.dropdown-toggle{href: "#", 'data-toggle' => 'dropdown'}
+          %li.dropdown#groups
+            %a.dropdown-toggle.groups-dropdown-btn{href: "#", 'data-toggle' => 'dropdown'}
               %i.fa.fa-group
               %span.hidden-xs= t :"common.groups"
             %ul.dropdown-menu
