--- a/app/assets/stylesheets/unstructured/_header.css.scss
+++ b/app/assets/stylesheets/unstructured/_header.css.scss
@@ -14,6 +14,10 @@
   background: image-url("navbar-logo-beta.jpg") 0 0 no-repeat;
 }
 
+input.group-dropdown-search {
+  width: 100%;
+}
+
 .dropdown-menu {
   a {
     clear: both;
