--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -56,4 +56,4 @@
         %nav
           %ul.nav.navbar-nav.navbar-right.pull-right
             - unless controller_name == "group_requests"
-              %li=link_to t(:log_in), new_user_session_path
+              %li=link_to t(:log_in), new_user_session_path, class: 'login'
