fix invitation form

--- a/app/views/invitations/_invite_users.html.haml
+++ b/app/views/invitations/_invite_users.html.haml
@@ -3,7 +3,7 @@
 .form-group
   %p= t("invitation.recipients")
   = text_area_tag 'invitees', nil, class: 'validate-emails form-control js-autocomplete-contacts', placeholder: t("invitation.invitees_placeholder"), data: {autocomplete_path: autocomplete_contacts_path}
-  .email-validation-help= t('error.invalid_email')
+  -#.email-validation-help= t('error.invalid_email')
   %p
     %small= t(:'invitation.import_contacts_html', google_link: link_to(t(:google), import_contacts_path(from: 'gmail')))
   = form.input :recipients, as: :hidden, input_html: { class: 'recipients' }
