--- a/app/assets/stylesheets/unstructured/_header.css.scss
+++ b/app/assets/stylesheets/unstructured/_header.css.scss
@@ -15,6 +15,7 @@
 }
 
 input.group-dropdown-search {
+  padding: 5px;
   width: 100%;
 }
 
@@ -204,8 +205,8 @@ li.dropdown#groups {
     margin-left: 10px;
   }
   .dropdown-menu {
+    min-width: 350px;
     padding-bottom: 0;
-    width: 320px;
   }
 }
 
@@ -216,9 +217,6 @@ li.dropdown#groups {
 }
 li#inbox {
   a {min-width: 250px}
-}
-li#groups ul.dropdown-menu {
-  width: 350px;
 }
 li.group-item {
   background-color: white;
