Squashed commit of the following:
commit b37425993d1ece798f9a0fc106c5fd93e259634c
Author: mix irving <whimful@gmail.com>
Date:   Tue Sep 16 15:30:21 2014 +1200

    Squashed commit of the following:

    commit 599d08102450aa23ad684a3fe3c286f2ab101729
    Author: mix irving <whimful@gmail.com>
    Date:   Tue Sep 16 14:19:44 2014 +1200

        specfix

    commit 464045bd57a76031364a79aab0ce1259f3119b10
    Author: mix irving <whimful@gmail.com>
    Date:   Tue Sep 16 13:25:35 2014 +1200

        refactor sommmmmore

    commit 491184f88d66cbc9dd8016e2e402705bade0f88f
    Author: mix irving <whimful@gmail.com>
    Date:   Tue Sep 16 12:32:19 2014 +1200

        add a faster way to do comparisons?

    commit 329b01beb04fa81e8f9fc889dcef53eb49d7e3b1
    Author: mix irving <whimful@gmail.com>
    Date:   Tue Sep 16 11:46:44 2014 +1200

        final ?

    commit 1982fbff794b70b3995317d8380e6700073f726d
    Author: mix irving <whimful@gmail.com>
    Date:   Mon Sep 15 22:33:23 2014 +1200

        take out fallback ymls

    commit 2561996e6445769534faa7c11a71829d636d44b7
    Author: mix irving <whimful@gmail.com>
    Date:   Mon Sep 15 22:26:46 2014 +1200

        yucky yaml bloat

    commit 5dea740b84295bab64e4ec3520b4267bf2d17113
    Author: Robert Guthrie <rob@guthr.ie>
    Date:   Mon Sep 15 17:40:40 2014 +1200

        remove aliases

    commit a1ebec941ed0bcd9ad942b55b75f2cbd5f2063bc
    Author: mix irving <whimful@gmail.com>
    Date:   Sun Sep 14 23:22:42 2014 +1200

        tidier

    commit f091717cf4e3b3f59d4509057f8ff3b7775a771e
    Author: mix irving <whimful@gmail.com>
    Date:   Sun Sep 14 17:50:50 2014 +1200

        flop

    commit d316a9aa1fd68c6015c50e595b4ca9c89ac9c6ce
    Author: mix irving <whimful@gmail.com>
    Date:   Sun Sep 14 17:29:14 2014 +1200

        tidy

    commit 3e8ab785efbcaac152f27cdb6ff34f3e225e0951
    Author: mix irving <whimful@gmail.com>
    Date:   Sun Sep 14 15:46:03 2014 +1200

        feedback fixes

    commit 4e3

--- a/app/assets/stylesheets/unstructured/_pages.css.scss
+++ b/app/assets/stylesheets/unstructured/_pages.css.scss
@@ -877,5 +877,15 @@ body.pages.try_it {
   }
 }
 body.pages.translation {
-  td { padding: 0 10px }
+  .container h2 { font-size: 1.6em; }
+  .twitter-feed-container { padding-left: 16px; }
+  .code {
+    font-family: 'courier';
+    font-size: 14px;
+    background-color: $lighter-grey;
+    border-radius: 2px;
+    margin-left: 16px;
+  }
+  p.code { padding-left: 16px; }
+  td { padding: 0 10px; }
 }
