try progrss bar

--- a/app/views/discussions/_add_comment.html.haml
+++ b/app/views/discussions/_add_comment.html.haml
@@ -28,7 +28,7 @@
             {%=o.name%}
           %button.close.cancel-upload &times;
           .progress.active
-            .bar
+            .progress-bar
 
       %script#template-upload--attached{type: "text/x-tmpl"}
         .attachments
