--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -1,10 +1,10 @@
 %footer.footer
-  .col-sm-4
+  .col-sm-6
     - unless current_user
-      %select#select-locale.form-control
+      %select#select-locale
         = options_for_select linked_language_options, selected_language_option
 
     = link_to t(:translate, default: "help translate Loomio!"), 'https://www.loomio.org/d/hB1Oijwv/overview-of-the-translation-process-for-translators'
 
-  .col-sm-8.footer-links
+  .col-sm-6.footer-links
     = render "footer_links", target: 'blank'
