--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,6 +28,6 @@
         = render 'application/flash_messages', :flash => flash, :on_landing_page => false
       .page-container
         = yield
-      = render 'footer_logged_in'
+      = render 'footer'
   = render 'intercom_tracker'
   = render 'heap_analytics'
