--- a/app/views/layouts/pages.html.haml
+++ b/app/views/layouts/pages.html.haml
@@ -28,7 +28,10 @@
         .content
           = yield
 
-    = render 'footer_logged_out'
+    .row
+      .container
+        .col-xs-12
+          = render 'footer'
 
   = javascript_include_tag "application"
   = theme_javascript_include_tag
