--- a/app/views/discussions/_js_prompt_user_to_join_or_authenticate.html.haml
+++ b/app/views/discussions/_js_prompt_user_to_join_or_authenticate.html.haml
@@ -1,5 +1,5 @@
 :javascript
-  $('body').on('click', '.vote-buttons', function(e) {
+  $('body').on('click', '.vote-buttons, #new-comment-form', function(e) {
     e.preventDefault();
     $(this).find('.popover').hide();
     $('#prompt-user-to-join-or-authenticate').modal('show');
