--- a/app/views/users/profile.html.haml
+++ b/app/views/users/profile.html.haml
@@ -4,6 +4,7 @@
     %p= link_to t(:'profile_form.view'), user_path(current_user), id: 'edit-profile'
     = simple_form_for @user do |f|
       = f.input :name
+      = f.input :username
       = f.input :email
       = f.input :selected_locale, :collection => language_options, include_blank: false, label: t(:'simple_form.labels.user.language_preference')
       = f.submit :class => "btn btn-primary", id: "profile-submit", :data => {:disable_with => t("helpers.submit.user.update")}
