--- a/app/views/pages/translation.html.haml
+++ b/app/views/pages/translation.html.haml
@@ -17,9 +17,9 @@
               %td= "|"
               %td= t(locale)
 
-        %h2 Test Languages (#{Loomio::I18n::TEST_LOCALE_STRINGS.count})
+        %h2 Test Languages (#{Loomio::I18n::TEST_LOCALES.count})
         %table.code
-          - Loomio::I18n::TEST_LOCALE_STRINGS.each do |locale|
+          - Loomio::I18n::TEST_LOCALES.each do |locale|
             %tr
               %td= locale
               %td= "|"
