Add correct id to notifications toggle

--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -20,7 +20,7 @@
               %i.fa.fa-inbox
               %span#inbox-count.activity-count.label
           %li.dropdown#notifications-container
-            %a.dropdown-toggle.notifications-dropdown-btn{'data-toggle' => 'dropdown', :href => '#'}
+            %a.dropdown-toggle.notifications-dropdown-btn{'data-toggle' => 'dropdown', :href => '#', :id => 'notifications-toggle'}
               %i.fa.fa-bell
               %span#notifications-count.label.activity-count
             %ul.dropdown-menu
