--- a/lineman/app/pages/index.haml
+++ b/lineman/app/pages/index.haml
@@ -5,6 +5,7 @@
     %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}/
     %link{href: '/css/app.css', media: 'screen', rel: 'stylesheet', type: 'text/css'}
     %link{href: "http://fonts.googleapis.com/css?family=Open+Sans", rel: "stylesheet", type: "text/css"}
+    %base{href: '/'}
 
   %body
     %header#header
