--- a/lineman/app/css/layout.scss
+++ b/lineman/app/css/layout.scss
@@ -8,7 +8,7 @@ $padding: 18px;
 }
 
 #main-container {
-  background-color: wheat;
+  /*background-color: wheat;*/
 }
 
 #sidebar {
@@ -26,7 +26,7 @@ $padding: 18px;
 }
 
 #main-content {
-  background-color: yellow;
+  /*background-color: yellow;*/
   @extend .container;
 }
 
