Fix category label

--- a/app/assets/stylesheets/unstructured/_explore.css.scss
+++ b/app/assets/stylesheets/unstructured/_explore.css.scss
@@ -74,6 +74,7 @@ body.explore {
       border: 2px solid white;
     }
     .group-title {
+      display: inline-block;
       position: absolute;
       bottom: 0px;
       left: 104px;
