styleguide for discussion is oookay

--- a/app/views/style_guide/_avatar.html.haml
+++ b/app/views/style_guide/_avatar.html.haml
@@ -1,4 +1,4 @@
 - if user.avatar_kind == 'initials'
-  = user.avatar_initials
+  .initials= user.avatar_initials
 - else
   = image_tag user.avatar_url('medlarge', user.avatar_kind)
