--- a/app/views/style_guide/thread_items/_new_comment.html.haml
+++ b/app/views/style_guide/thread_items/_new_comment.html.haml
@@ -1,18 +1,21 @@
 - comment = item.eventable
 .thread-item
-  .thread-item-header.media
+  .thread-item-header
     .card-options-menu.pull-right
       %i.fa.fa-chevron-down
-    .author-photo.pull-left
+
+  .thread-item-author
+    .card-author-photo.pull-left
       = render 'avatar', user: comment.author
-    .media-body
+    .author-details
       .author-name
         = comment.author_name
       .author-role
         = comment.author_role
+
   .thread-item-body
-    -#= comment.body
     ~ add_mention_links(render_rich_text(comment.body.to_s.force_encoding("UTF-8"), comment.uses_markdown?)).html_safe
+
   .thread-item-footer
     .like-reply-age
       = link_to 'Like', '#'
@@ -23,7 +26,4 @@
         = time_ago_in_words(comment.published_at)
         ago
     .liked-by
-      - liker_names = comment.liker_names(max: 3)
-      - if liker_names.present?
-        Liked by
-        = liker_names.join(', ').gsub(/\,(?=[^,]*$)/, " and");
+      = render 'liked_by_sentence', names: comment.liker_names
