--- a/lineman/app/templates/discussion_items/new_comment.haml
+++ b/lineman/app/templates/discussion_items/new_comment.haml
@@ -28,5 +28,5 @@
           Reply
 
   .cuke-liked-by-names{ng_show: 'anybodyLikesIt()'}
-    Liked by {{ whoLikesIt().join(', ') }}
+    Liked by {{ comment.liker_names().join(', ') }}
 
