--- a/lineman/app/templates/discussion_items/new_vote.haml
+++ b/lineman/app/templates/discussion_items/new_vote.haml
@@ -4,6 +4,7 @@
     -#.vote-icon{class: vote.position_verb}
 
   .thread-item-activity-description
-    {{ 'no_details' | translate}}
+    -#{{ 'new_vote.user_abstained_on_proposal' | translate: voteTranslations }}
+
   .thread-item-body.thread-item-vote-statement
     {{ vote.statement }}
