--- a/lineman/app/pages/index.haml
+++ b/lineman/app/pages/index.haml
@@ -1,12 +1,12 @@
 !!!
-%html{'ng-app' => 'loomioApp'}
+%html{ng-app: 'loomioApp'}
   %head
     %title Loomio
     %meta{charset: 'utf-8'}
-    %meta{content: "IE=Edge", "http-equiv" => "X-UA-Compatible"}
-    %meta{content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", name: "viewport"}
+    %meta{content: 'IE=Edge', 'http-equiv': 'X-UA-Compatible'}
+    %meta{content: 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name: "viewport"}
     %link{href: '/css/app.css', media: 'screen', rel: 'stylesheet', type: 'text/css'}
-    %link{href: "http://fonts.googleapis.com/css?family=Open+Sans", rel: "stylesheet", type: "text/css"}
+    %link{href: 'http://fonts.googleapis.com/css?family=Open+Sans', rel: 'stylesheet', type: 'text/css'}
     %base{href: '/'}
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -19,7 +19,7 @@
         .container
           .navbar-header
 
-    %main{'ng-view' => ''}
+    %main{ng_view: ''}
 
-    %script{ src: '/js/app.js', type: 'text/javascript'}
-    %script{ src: 'http://localhost:9292/faye/client.js', type: 'text/javascript'}
+    %script{src: '/js/app.js', type: 'text/javascript'}
+    %script{src: 'http://localhost:9292/faye/client.js', type: 'text/javascript'}
